fixed hero on mobile

--- a/main.css
+++ b/main.css
@@ -596,7 +596,7 @@ hr {
     z-index: 1;
     top: 5%;
     left: 5%;
-    width: 45%;
+    width: 90%;
   }
 
   .hero-text > h1 {
